--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.15.0",
     "express": "~4.0.0",
     "moment": "^2.11.2",
+    "moment-precise-range": "^0.1.1",
     "promised-mongo": "~1.2.0",
     "request-promise": "~2.0.0"
   },
